  * Add new dpkg-buildpackage -J option, which is a safe version of -j.
  * Fix dpkg-gencontrol to add correct binary filename to debian/files,
    even when overriding the Package field value with the -D option.
    Reported by Niels Thykier <niels@thykier.net>.
  * Move the implicit build-essential:native Build-Depends from
    dpkg-checkbuilddeps to a new vendor hook, as it is Debian-specific.
  * Perl modules:
    - Remove non-functional timezone name support from
      Dpkg::Changelog::Entry::Debian.
    - Use Time::Piece (part of the perl core distribution) instead of
      Date::Parse in Dpkg::Changelog::Entry::Debian. This reduces the build
      and run-time dependencies, and helps architecture bootstrapping.
    - Simplify distribution splitting in Dpkg::Changelog::Entry::Debian.
    - Add new function changelog_parse_plugin() in Dpkg::Changelog::Parse.
    - Add new function changelog_parse_debian() in Dpkg::Changelog::Parse, and
      use it in changelog_parse() instead of the external plugin parser when
      the input format is “debian”. This significantly speeds up the parsing.
    - Remove trailing space before handling blank line dot-separator in
      Dpkg::Control::HashCore. Regression introduced in dpkg 1.18.0.
      Reported by Jakub Wilk <jwilk@debian.org>. Closes: #789580
    - Allow the Maintainer field in CTRL_FILE_STATUS.
    - Import make_path from File::Path in Dpkg::Source::Package::V2.
      Regression introduced in dpkg 1.18.0. Closes: #789957
    - Make the BinaryFiles subpackage self-contained by explicitly importing
      File::Spec in Dpkg::Source::Package::V2.
    - Do not exclude pre-existing symlinks when unpacking the debian/ tarball
      in Dpkg::Source::Package::V2. Closes: #790073, #791535
    - Disable the thread sanitizer when the address sanitizer is enabled
      in Dpkg::Vendor::Debian as these are mutually incompatible, and make
      sanitize=+all not work at all.