@@ -19,7 +19,7 @@
 .\" You should have received a copy of the GNU General Public License
 .\" along with this program.  If not, see <https://www.gnu.org/licenses/>.
 .
-.TH dpkg\-buildpackage 1 "2013-12-12" "Debian Project" "dpkg utilities"
+.TH dpkg\-buildpackage 1 "2015-07-05" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-buildpackage \- build binary or source packages from sources
 .
@@ -212,6 +212,11 @@ default behavior.
 .TP
 .B \-d
 Do not check build dependencies and conflicts.
+.TP
+.B \-\-ignore\-builtin\-builddeps
+Do not check built-in build dependencies and conflicts (since dpkg 1.18.2).
+These are the distribution specific implicit build dependencies usually
+required in a build environment, the so called Build-Essential package set.
 .TP
 .B \-nc
 Do not clean the source tree (implies \fB\-b\fP if nothing else has been
