@@ -1,7 +1,7 @@
 .\" dpkg manual page - dpkg-checkbuilddeps(1)
 .\"
 .\" Copyright © 2001 Joey Hess <joeyh@debian.org>
-.\" Copyright © 2007-2012 Guillem Jover <guillem@debian.org>
+.\" Copyright © 2007-2013, 2015 Guillem Jover <guillem@debian.org>
 .\" Copyright © 2008-2011 Raphaël Hertzog <hertzog@debian.org>
 .\"
 .\" This is free software; you can redistribute it and/or modify
@@ -17,7 +17,7 @@
 .\" You should have received a copy of the GNU General Public License
 .\" along with this program.  If not, see <https://www.gnu.org/licenses/>.
 .
-.TH dpkg\-checkbuilddeps 1 "2013-09-17" "Debian Project" "dpkg utilities"
+.TH dpkg\-checkbuilddeps 1 "2015-07-05" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-checkbuilddeps \- check build dependencies and conflicts
 .
@@ -50,6 +50,11 @@ Use when only arch-indep packages will be built, or combine with
 Ignore \fBBuild\-Depends\-Indep\fP and \fBBuild\-Conflicts\-Indep\fP
 lines. Use when only arch-dep packages will be built, or combine with
 \fB\-A\fP when only a source package is to be built.
+.TP
+.B \-I
+Ignore built-in build depends and conflicts (since dpkg 1.18.2).
+These are implicit dependencies that are usually required on a specific
+distribution, the so called Build-Essential package set.
 .TP
 .BI "\-d " build-depends-string
 .TP
