@@ -8,6 +8,9 @@ dpkg (1.18.2) UNRELEASED; urgency=low
     Reported by Niels Thykier <niels@thykier.net>.
   * Move the implicit build-essential:native Build-Depends from
     dpkg-checkbuilddeps to a new vendor hook, as it is Debian-specific.
+  * Add support for ignoring built-in build dependencies and conflicts
+    with the new «dpkg-buildpackage --ignore-builtin-builddeps» and
+    «dpkg-checkbuilddeps -I» options. Closes: #480638, #571671
   * Perl modules:
     - Remove non-functional timezone name support from
       Dpkg::Changelog::Entry::Debian.
